# otterlang

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/katon-cli/: Cargo.toml  README.md
crates/katon-cli/src/: main.rs  model.rs  scaffold.rs
crates/katon-core/: Cargo.toml  README.md
crates/katon-core/src/: ast.rs  errors.rs  lib.rs  span.rs
crates/katon-linter/: Cargo.toml  README.md
crates/katon-lsp/: Cargo.toml  README.md
src/: ast.rs  check.rs  errors.rs  katon.lalrpop  lib.rs  main.rs  otter.lalrpop  runner.rs  symbol.rs  symbol_table.rs  typecheck.rs  vc.rs
tests/: smoke_test.rs
tests/fail_borrow/: use_after_move.ktn
tests/fail_logic/: out_of_bounds.ktn
tests/success/: safe_swap.ktn
